syntax = "proto3";

//option java_multiple_files = true;
option java_package = "cn.leiax00.api.system.v1";
option java_outer_classname = "Simple";

// The greeting service definition.
service SimpleService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {
  }
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}